@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
   - Experimental: allow record as closure argument
+    Some record member types may not be supported,
+    members with the type string_rw are definitely NOT supported.
 
 0.53      2018-08-15 20:38:29 -0400
   - Production release identical to 0.52_04
